--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder"
   },
-  "browser":{
+  "browser": {
     "child_process": true
   },
   "keywords": [
@@ -17,11 +18,29 @@
   ],
   "author": "zeankun.dev <zeanfender11@gmail.com>",
   "license": "GPL-3.0",
+  "build": {
+    "appId": "com.zeankundev.coal",
+    "productName": "Coal",
+    "copyright": "Copyright © 2022 zeankun.dev",
+    "icon": "./assets/logo_1024.png",
+    "directories": {
+      "output": "build"
+    },
+    "win": {
+      "target": "nsis, portable, squirrel",
+      "publisherName": "zeankun.dev"
+    },
+    "linux": {
+      "target": "deb",
+      "maintainer": "zeankun.dev",
+      "category": "Game"
+    }
+  },
   "devDependencies": {
-    "electron": "^19.0.10"
+    "electron": "^4.2.12",
+    "electron-builder": "^23.3.3"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.8",
     "electron-reloader": "^1.2.3",
     "webpack": "^5.74.0"
   }
